--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/orm-pack": "^1.0",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "symfony/maker-bundle": "^1.15"
     },
     "config": {
         "preferred-install": {
